--- a/src/components/TodoList/todo-list.css
+++ b/src/components/TodoList/todo-list.css
@@ -13,9 +13,15 @@ ul {
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  height: 430px;
+  height: 443px;
 }
 
 ul li:last-child {
   border-bottom: none;
+}
+
+ul::-webkit-scrollbar {
+  width: 8px;     
+  height: 8px;   
+  display: none;  
 }
