--- a/src/components/TodoList/todo-list.css
+++ b/src/components/TodoList/todo-list.css
@@ -6,7 +6,7 @@ ul {
   list-style: none;
   background-color: var(--title-beige);
   padding: 1rem 1rem 2rem;
-  max-height: 665px;
+  max-height: 443px;
   overflow: auto;
   margin-top: 2rem;
   margin-bottom: 0;
@@ -14,7 +14,7 @@ ul {
   flex-direction: column;
   gap: 1rem;
   height: 443px;
-  max-width: 366px;
+  width: 366px;
 }
 
 ul li:last-child {
