--- a/src/containers/CreateTodoContainer/create-todo-container.css
+++ b/src/containers/CreateTodoContainer/create-todo-container.css
@@ -1,3 +1,14 @@
 #create-todo {
   position: relative;
 }
+
+.create-todos-container {
+  background-color: var(--container-grey);
+  border-radius: 2px;
+  display: flex;
+  flex-direction: column;
+  padding: 4rem 4rem 1rem;
+  margin-top: 4rem;
+  min-width: 24rem;
+  max-height: 792px;
+}
