--- a/src/containers/TodosContainer/todos-container.css
+++ b/src/containers/TodosContainer/todos-container.css
@@ -6,3 +6,13 @@
   margin-top: 0;
   font-family: var(--machine);
 }
+
+.todos-container {
+  display: flex;
+  flex-direction: column;
+  padding: 0.5rem 2rem 0 4rem;
+  align-items: center;
+  margin-top: 4rem;
+  min-width: 24rem;
+  max-height: 792px;
+}
