--- a/src/components/TodoSearch/todo-search.css
+++ b/src/components/TodoSearch/todo-search.css
@@ -1,7 +1,8 @@
-#search-container {
+.search-container {
   display: flex;
-  justify-content: center;
   box-sizing: border-box;
+  width: 400px;
+  justify-content: space-evenly;
 }
 
 input {
@@ -9,7 +10,7 @@ input {
   border-radius: 16px;
   padding: 1rem;
   height: 1rem;
-  width: 22rem;
+  width: 18rem;
   font-family: var(--machine);
   font-size: 145%;
   overflow: visible;
