--- a/src/components/CreateTodoButton/create-todo-button.css
+++ b/src/components/CreateTodoButton/create-todo-button.css
@@ -10,3 +10,9 @@
   background-color: var(--form-beige);
   cursor: pointer;
 }
+
+@media screen and (max-width: 1024px) {
+  #create-todo-btn {
+    top: 10.5rem
+  }
+}
