--- a/src/components/TodoList/todo-list.css
+++ b/src/components/TodoList/todo-list.css
@@ -1,5 +1,7 @@
 #list {
-  padding: 0 2.2rem;
+  width: 100%;
+  max-width: 32rem;
+  position: relative;
 }
 
 ul {
@@ -14,7 +16,6 @@ ul {
   flex-direction: column;
   gap: 1rem;
   height: 443px;
-  width: 366px;
 }
 
 ul li:last-child {
