--- a/src/components/TodoSearch/todo-search.css
+++ b/src/components/TodoSearch/todo-search.css
@@ -1,8 +1,10 @@
 .search-container {
   display: flex;
+  gap: 1rem;
   box-sizing: border-box;
-  width: 400px;
-  justify-content: space-evenly;
+  width: 100%;
+  max-width: 32rem;
+  justify-content: space-between;
 }
 
 input {
@@ -10,7 +12,7 @@ input {
   border-radius: 16px;
   padding: 1rem;
   height: 1rem;
-  width: 18rem;
+  width: 75%;
   font-family: var(--machine);
   font-size: 145%;
   overflow: visible;
