--- a/src/containers/CreateTodoContainer/create-todo-container.css
+++ b/src/containers/CreateTodoContainer/create-todo-container.css
@@ -1,5 +1,6 @@
 #create-todo {
   position: relative;
+  width: fit-content;
 }
 
 .create-todos-container {
@@ -7,8 +8,13 @@
   border-radius: 2px;
   display: flex;
   flex-direction: column;
+  align-items: center;
   padding: 4rem 4rem 1rem;
   margin-top: 4rem;
-  min-width: 24rem;
-  max-height: 792px;
+}
+
+@media screen and (max-width: 1024px) {
+  .create-todos-container {
+    display: none;
+  }
 }
