--- a/src/pages/app.css
+++ b/src/pages/app.css
@@ -3,8 +3,8 @@
 #app {
   display: flex;
   justify-content: center;
-  min-height: 84vh;
   padding: 3rem;
+  gap: 5rem;
 }
 
 .subtitle {
@@ -13,4 +13,17 @@
   margin-top: 0;
   text-align: center;
   font-family: var(--machine);
+}
+
+@media screen and (max-width: 1024px) {
+  #app {
+    flex-direction: column;
+    align-items: center;
+  }
+}
+
+@media screen and (max-width: 1090px) {
+  .subtitle {
+    font-size: 1.5rem;
+  }
 }
